--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -20,7 +20,7 @@
             android:id="@+id/locationToolbarText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="start"
             android:fontFamily="@font/notosans_bold"
             android:text="주변 시설"
             android:textColor="@color/black"
