fix : #38 버튼 폰트 수정

--- a/app/src/main/res/layout/activity_detail_facility.xml
+++ b/app/src/main/res/layout/activity_detail_facility.xml
@@ -132,6 +132,8 @@
             android:layout_height="40dp"
             android:backgroundTint="#73C0B0"
             android:text="예약하기"
+            android:fontFamily="@font/notosans_semibold"
+            android:includeFontPadding="false"
             android:textColor="@color/black" />
     </LinearLayout>
 </LinearLayout>
