--- a/app/src/main/res/layout/fragment_single_service.xml
+++ b/app/src/main/res/layout/fragment_single_service.xml
@@ -38,8 +38,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:fontFamily="@font/notosans_bold"
+                    android:includeFontPadding="false"
                     android:text="아파트톡의 중심은 항상 고객님입니다."
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -47,8 +49,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:fontFamily="@font/notosans_regular"
+                    android:includeFontPadding="false"
                     android:text="이용하며 느끼는 불편한 점이나 바라는 점을 알려주세요 \n소중한 의견으로 한 걸음 더 다가가는 아파트톡이 되겠습니다"
-                    android:textSize="14dp" />
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/singleServiceTextViewQTypeInfoTime"
@@ -57,7 +61,9 @@
                     android:layout_marginTop="8dp"
                     android:text="문의량이 많은 경우 답변은 24시간 이상 소요될 수 있습니다"
                     android:textStyle="bold"
-                    android:textSize="14dp" />
+                    android:fontFamily="@font/notosans_semibold"
+                    android:includeFontPadding="false"
+                    android:textSize="14sp" />
 
 
                 <TextView
@@ -67,7 +73,9 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="4dp"
                     android:text="제목"
-                    android:textSize="16dp"
+                    android:fontFamily="@font/notosans_bold"
+                    android:includeFontPadding="false"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -82,7 +90,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="제목 입력"
-                        android:textSize="16dp" />
+                        android:fontFamily="@font/notosans_bold"
+                        android:includeFontPadding="false"
+                        android:textSize="16sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
@@ -90,9 +100,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:fontFamily="@font/notosans_medium"
+                    android:includeFontPadding="false"
                     android:layout_marginBottom="4dp"
                     android:text="내용"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -108,8 +120,10 @@
                         android:layout_height="250dp"
                         android:gravity="top"
                         android:hint="의견을 남겨주세요"
+                        android:fontFamily="@font/notosans_medium"
+                        android:includeFontPadding="false"
                         android:inputType="text|textMultiLine"
-                        android:textSize="14dp" />
+                        android:textSize="14sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -131,8 +145,10 @@
                 android:background="@drawable/style_pointbutton_radias"
                 android:text="문의하기"
                 android:textColor="@color/white"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textStyle="bold"
+                android:fontFamily="@font/notosans_bold"
+                android:includeFontPadding="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
