--- a/app/src/main/res/layout/row_faq_item.xml
+++ b/app/src/main/res/layout/row_faq_item.xml
@@ -17,7 +17,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="TextView"
-            android:textSize="18dp"
+            android:fontFamily="@font/notosans_bold"
+            android:includeFontPadding="false"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +30,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="TextView"
-            android:textSize="14dp"
+            android:fontFamily="@font/notosans_regular"
+            android:includeFontPadding="false"
+            android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rowMyQTextViewTitle" />
 
