--- a/app/src/main/res/layout/activity_company_info.xml
+++ b/app/src/main/res/layout/activity_company_info.xml
@@ -33,7 +33,7 @@
         android:id="@+id/companyGifImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/aparttalk"
+        android:src="@drawable/aparttalkcompany"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/textCompanyInfoTitle"
