--- a/app/src/main/res/layout/activity_user_agreement.xml
+++ b/app/src/main/res/layout/activity_user_agreement.xml
@@ -42,6 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:fontFamily="@font/notosans_semibold"
                 android:text="@string/terms_of_service"
                 android:textSize="16sp" />
 
