[Feat #16] 전자투표 화면구성

--- a/app/src/main/res/layout/activity_apt_schedule.xml
+++ b/app/src/main/res/layout/activity_apt_schedule.xml
@@ -79,7 +79,7 @@
                     app:srcCompat="@drawable/icon_donut2" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/voteTextView1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -106,7 +106,7 @@
                     app:srcCompat="@drawable/icon_donut3" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/voteTextView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -154,7 +154,7 @@
                     app:srcCompat="@drawable/icon_donut5" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/voteTextView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -175,7 +175,7 @@
                     app:srcCompat="@drawable/icon_donut6" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/voteTextView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
