#40 feat 마이페이지 화면 수정

--- a/app/src/main/res/layout/fragment_facility.xml
+++ b/app/src/main/res/layout/fragment_facility.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|start"
             android:fontFamily="@font/notosans_bold"
+            android:includeFontPadding="false"
             android:text="이용시설"
             android:textColor="@color/black"
             android:textSize="18sp" />
