--- a/app/src/main/res/layout/fragment_reservation_confirm.xml
+++ b/app/src/main/res/layout/fragment_reservation_confirm.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/notosans_semibold"
+            android:includeFontPadding="false"
             android:text="2024.05.17"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="40dp"
             android:fontFamily="@font/notosans_semibold"
             android:includeFontPadding="false"
             android:text="수영장"
@@ -85,6 +86,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
             android:text="40,000 원"
+            android:fontFamily="@font/notosans_semibold"
+            android:includeFontPadding="false"
             android:textColor="@color/third"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/reservationConfirmImageView"
