--- a/app/src/main/res/layout/fragment_view_my_q.xml
+++ b/app/src/main/res/layout/fragment_view_my_q.xml
@@ -38,6 +38,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:fontFamily="@font/notosans_semibold"
+                    android:includeFontPadding="false"
                     android:text="아파트톡의 중심은 항상 고객님입니다."
                     android:textSize="18dp"
                     android:textStyle="bold" />
@@ -47,6 +49,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:fontFamily="@font/notosans_regular"
+                    android:includeFontPadding="false"
                     android:text="이용하며 느끼는 불편한 점이나 바라는 점을 알려주세요 \n소중한 의견으로 한 걸음 더 다가가는 아파트톡이 되겠습니다"
                     android:textSize="14dp" />
 
@@ -55,6 +59,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:fontFamily="@font/notosans_semibold"
+                    android:includeFontPadding="false"
                     android:text="문의량이 많은 경우 답변은 24시간 이상 소요될 수 있습니다"
                     android:textStyle="bold"
                     android:textSize="14dp" />
@@ -67,6 +73,8 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="4dp"
                     android:text="내용"
+                    android:fontFamily="@font/notosans_semibold"
+                    android:includeFontPadding="false"
                     android:textSize="16dp"
                     android:textStyle="bold" />
 
@@ -83,6 +91,8 @@
                         android:layout_height="250dp"
                         android:gravity="top"
                         android:text="질문한 내용입니다."
+                        android:fontFamily="@font/notosans_medium"
+                        android:includeFontPadding="false"
                         android:inputType="text|textMultiLine"
                         android:textSize="14dp" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -93,6 +103,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="4dp"
+                    android:fontFamily="@font/notosans_semibold"
+                    android:includeFontPadding="false"
                     android:text="답변"
                     android:textSize="16dp"
                     android:textStyle="bold" />
@@ -109,6 +121,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="250dp"
                         android:gravity="top"
+                        android:fontFamily="@font/notosans_medium"
+                        android:includeFontPadding="false"
                         android:text="답변한 내용입니다."
                         android:inputType="text|textMultiLine"
                         android:textSize="14dp" />
