--- a/app/src/main/res/layout/row_announcement_item.xml
+++ b/app/src/main/res/layout/row_announcement_item.xml
@@ -20,7 +20,8 @@
             android:text="TextView"
             android:textColor="#73C0B0"
             android:textSize="18dp"
-            android:textStyle="bold"
+            android:fontFamily="@font/notosans_semibold"
+            android:includeFontPadding="false"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,6 +31,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="TextView"
+            android:fontFamily="@font/notosans_regular"
+            android:includeFontPadding="false"
             android:textSize="14dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rowMyQTextViewTitle" />
