#23 feat 소방점검 화면 구현

--- a/app/src/main/res/layout/fragment_fire_check_main.xml
+++ b/app/src/main/res/layout/fragment_fire_check_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:transitionGroup="true"
     tools:context=".ui.entiremenu.FireCheck.FireCheckMainFragment">
 
     <LinearLayout
@@ -38,7 +39,7 @@
         </LinearLayout>
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cardViewFireCheck1"
+            android:id="@+id/cardViewFireCheck"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -151,7 +152,7 @@
             android:layout_marginBottom="10dp" />
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cardViewFireCheck3"
+            android:id="@+id/cardViewFireCheck2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -165,7 +166,7 @@
                 android:padding="10dp">
 
                 <TextView
-                    android:id="@+id/textViewFireCheck3"
+                    android:id="@+id/textViewFireExtinguisher"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
