--- a/app/src/main/res/layout/fragment_fire_process_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_fire_process_bottom_sheet.xml
@@ -12,6 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <ImageView
@@ -19,9 +20,8 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="60dp"
-            android:layout_weight="15"
-            android:src="@drawable/icon_fire_extinguisher"
-            tools:layout_weight="1" />
+            android:layout_weight="1"
+            android:src="@drawable/icon_fire_extinguisher" />
 
         <TextView
             android:id="@+id/textViewFireProcessSubject"
