#23 feat 소방점검 화면 구현

--- a/app/src/main/res/layout/fragment_fire_check_self.xml
+++ b/app/src/main/res/layout/fragment_fire_check_self.xml
@@ -8,6 +8,25 @@
     android:transitionGroup="true"
     tools:context=".ui.entiremenu.FireCheck.FireCheckSelfFragment">
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbarFireCheck2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme">
+
+        <TextView
+            android:id="@+id/textViewToolbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="소방점검"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textStyle="bold" />
+
+    </com.google.android.material.appbar.MaterialToolbar>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
