--- a/app/src/main/res/layout/fragment_fire_check_main.xml
+++ b/app/src/main/res/layout/fragment_fire_check_main.xml
@@ -30,6 +30,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#FFFFFF"
         android:orientation="vertical"
         android:padding="10dp">
 
